first attempt knn no saved table yet

--- a/SKIRT/cloudy/CMakeLists.txt
+++ b/SKIRT/cloudy/CMakeLists.txt
@@ -4,11 +4,11 @@
 # //////////////////////////////////////////////////////////////////
 
 # ------------------------------------------------------------------
-# Builds a library for the SKIRT core layer
+# Builds a library for the SKIRT Cloudy wrapper
 # ------------------------------------------------------------------
 
 # set the target name
-set(TARGET skirtcore)
+set(TARGET cloudy)
 
 # list the source files in this directory
 file(GLOB SOURCES "*.cpp")
@@ -18,13 +18,13 @@ file(GLOB HEADERS "*.hpp")
 add_library(${TARGET} STATIC ${SOURCES} ${HEADERS})
 
 # add SMILE library dependencies
-target_link_libraries(${TARGET} schema fundamentals)
-include_directories(../../SMILE/schema ../../SMILE/fundamentals)
+target_link_libraries(${TARGET} fundamentals hnsw utils)
+include_directories(../../SMILE/fundamentals ../hnsw ../utils)
 
 # add SKIRT library dependencies
-target_link_libraries(${TARGET} fitsio voro mpi utils tetgen cloudy)
-include_directories(../fitsio ../voro ../mpi ../utils ../cloudy)
-include_directories(SYSTEM ../tetgen)  # suppress warnings in tetgen header
+# target_link_libraries(${TARGET} fitsio voro mpi utils tetgen)
+# include_directories(../fitsio ../voro ../mpi ../utils)
+# include_directories(SYSTEM ../tetgen)  # suppress warnings in tetgen header
 
 # adjust C++ compiler flags to our needs
 include("../../SMILE/build/CompilerFlags.cmake")
