--- a/SKIRT/CMakeLists.txt
+++ b/SKIRT/CMakeLists.txt
@@ -9,9 +9,11 @@
 
 # add all relevant subdirectories; each subdirectory defines a single target
 add_subdirectory(fitsio)
+add_subdirectory(hnsw)
 add_subdirectory(voro)
 add_subdirectory(tetgen)
 add_subdirectory(mpi)
 add_subdirectory(utils)
+add_subdirectory(cloudy)
 add_subdirectory(core)
 add_subdirectory(main)
